--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=socialmedia
+
+spring.data.mongodb.uri=mongodb+srv://admin:123@cluster1.09uha2p.mongodb.net/SocialMedia?retryWrites=true&w=majority
